# CodeProjects

./: .gitignore
Arduino/Lesson10_Servo/: Lesson10_Servo.ino
Arduino/Lesson13_Ultrasonic/: Lesson13_Ultrasonic.ino
Arduino/Lesson14_IR/: Lesson14_IR.ino
Arduino/Lesson15_Humiture/: Lesson15_Humiture.ino
Arduino/Lesson16_Joystick/: Lesson16_Joystick.ino
Arduino/Lesson1_BlinkingLED/: Lesson1_BlinkingLED.ino
Arduino/Lesson20_Stopwatch/: Lesson20_Stopwatch.ino
Arduino/Lesson2_FlowingLED/: Lesson2_FlowingLED.ino
Arduino/Lesson3_ControllingLEDButton/: Lesson3_ControllingLEDButton.ino
Arduino/Lesson4_Doorbell/: Lesson4_Doorbell.ino
Arduino/Lesson5_TiltSwitch/: Lesson5_TiltSwitch.ino
Arduino/Lesson6_Relay/: Lesson6_Relay.ino
Arduino/Lesson7_RGB/: Lesson7_RGB.ino
Arduino/Lesson9_Photoresistor/: Lesson9_Photoresistor.ino
C_CPP/: README.md
C_CPP/Basic_OperatingSystems/: Makefile
C_CPP/bootloader/: notes.txt
Javascript/: README.md
Javascript/Project1/: README.md  index.html  script.js
Javascript/Project2/: README.md
Javascript/TodoList/: style.css
Python/ArticleToText/: PythonNewspaper.py  README.md
Python/Cipher/: encrypt_decrypt.py
Python/Project2/: CNN_A.py  README.md  requirements.txt
Python/Project3/: travelAgent.py
Python/Project4/: README.md  requirements.txt
Python/Project5/: NewHuggingFace.py
Python/Project7/: README.md
Python/SimpleHuggingFaceInterface/: README.md
Python/SimpleWebServer/: FirstSimpleWebServer.py  (+1 more)
Rust/: README.md
Rust/Project1/: Cargo.toml  main.rs
ThreadTest/: thread_test_c  thread_test_cpp
(+12 files in other folders)
